--- a/task1/style.css
+++ b/task1/style.css
@@ -5,73 +5,147 @@ body {
   box-sizing: border-box;
 }
 
-/* comapany Description */
-.company_desc {
-  text-align: center;
-  width: 990px;
-  margin: 50px auto;
+@media (min-width: 586px) {
+  /* comapany Description */
+  .company_desc {
+    text-align: center;
+    width: 990px;
+    margin: 50px auto;
+  }
+
+  .title {
+    background-color: blueviolet;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    color: white;
+    border: none;
+    border-radius: 12px;
+  }
+
+  .desc {
+    font-size: 16px;
+    font-weight: 400;
+  }
+
+  .line {
+    margin: 40px auto;
+    width: 320px;
+    border-top: 3px dashed blueviolet;
+  }
+
+  /* main */
+  main {
+    text-align: center;
+  }
+
+  section {
+    margin-bottom: 50px;
+  }
+
+  .team_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    margin-top: 50px;
+  }
+
+  .person {
+    width: 140px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .bg {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+
+  .dp {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .position {
+    margin: 0;
+  }
 }
 
-.title {
-  background-color: blueviolet;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 14px 30px;
-  color: white;
-  border: none;
-  border-radius: 12px;
-}
+@media (max-width: 586px) {
+  /* comapany Description */
+  .company_desc {
+    text-align: center;
+    margin: 50px auto;
+  }
 
-.desc {
-  font-size: 16px;
-  font-weight: 400;
-}
+  .title {
+    background-color: blueviolet;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 14px 30px;
+    color: white;
+    border: none;
+    border-radius: 12px;
+  }
 
-.line {
-  margin: 40px auto;
-  width: 320px;
-  border-top: 3px dashed blueviolet;
-}
+  .desc {
+    font-size: 16px;
+    font-weight: 400;
+  }
 
-/* main */
-main {
-  text-align: center;
-}
+  .line {
+    margin: 40px auto;
+    width: 320px;
+    border-top: 3px dashed blueviolet;
+  }
 
-section {
-  margin-bottom: 50px;
-}
+  /* main */
+  main {
+    text-align: center;
+  }
 
-.team_wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 60px;
-  margin-top: 50px;
-}
+  section {
+    margin-bottom: 50px;
+  }
 
-.person {
-  width: 140px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+  .team_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    margin-top: 50px;
+  }
 
-.bg {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  overflow: hidden;
-}
+  .person {
+    width: 140px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 
-.dp {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+  .bg {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
 
-.position {
-  margin: 0;
+  .dp {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .position {
+    margin: 0;
+  }
 }
