--- a/task1/style.css
+++ b/task1/style.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap");
+
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   box-sizing: border-box;
+  font-family: "Neuton", serif;
+  /* background: lightgray; */
 }
 
 @media (min-width: 586px) {
@@ -16,7 +18,7 @@ body {
   .title {
     background-color: blueviolet;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: 700;
     padding: 14px 30px;
     color: white;
     border: none;
@@ -24,7 +26,7 @@ body {
   }
 
   .desc {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 400;
   }
 
@@ -48,6 +50,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 60px;
+    flex-wrap: wrap;
     margin-top: 50px;
   }
 
@@ -64,13 +67,20 @@ body {
     width: 80px;
     height: 80px;
     border-radius: 50%;
+    /* border: 1px solid black; */
     overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
 
   .dp {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .name {
+    margin: 0;
+    margin-top: 5px;
   }
 
   .position {
@@ -88,8 +98,8 @@ body {
   .title {
     background-color: blueviolet;
     font-size: 16px;
-    font-weight: bold;
-    padding: 14px 30px;
+    font-weight: 700;
+    padding: 10px 20px;
     color: white;
     border: none;
     border-radius: 12px;
@@ -102,7 +112,7 @@ body {
 
   .line {
     margin: 40px auto;
-    width: 320px;
+    width: 100px;
     border-top: 3px dashed blueviolet;
   }
 
@@ -120,7 +130,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 60px;
-    flex-wrap: wrapgit;
+    flex-wrap: wrap;
     margin-top: 50px;
   }
 
@@ -138,12 +148,18 @@ body {
     height: 80px;
     border-radius: 50%;
     overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* border: 1px solid black; */
   }
 
   .dp {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+  .name {
+    margin: 0;
+    margin-top: 5px;
   }
 
   .position {
